--- a/inputs/model-spec.yml
+++ b/inputs/model-spec.yml
@@ -70,4 +70,4 @@ dependencies:
   - xlsxwriter=1.3.8=pyhd3eb1b0_0
   - zipp=3.4.1=pyhd3eb1b0_0
   - zlib=1.2.11=h62dcd97_4
-prefix: C:\Users\rsg\.conda\envs\model_py3
+prefix: C:\Users\rsg\.conda\envs\model
