Addressed some bugs in the scripts, updated the scripts and inputs to reflect new zone system, and updated the notebooks

--- a/inputs/model/intrazonals/destination_tt.in
+++ b/inputs/model/intrazonals/destination_tt.in
@@ -1554,6 +1554,10 @@ m matrix=md"attrtt"
  all 1549: 1
  all 1550: 1
  all 1551: 3
+ all 1552: 1
+ all 1553: 1
+ all 1554: 1
+ all 1555: 1
  all 1659: 1
  all 1660: 1
  all 1661: 1
