--- a/inputs/model/intrazonals/origin_tt.in
+++ b/inputs/model/intrazonals/origin_tt.in
@@ -1554,6 +1554,10 @@ m matrix=mo"prodtt"
  1549 all: 1
  1550 all: 1
  1551 all: 3
+ 1552 all: 1
+ 1553 all: 1
+ 1554 all: 1
+ 1555 all: 1
  1659 all: 1
  1660 all: 1
  1661 all: 1
