--- a/daysim_configuration_template.properties
+++ b/daysim_configuration_template.properties
@@ -18,12 +18,12 @@ EstimationSubpath = ..\estimation
 CustomizationDll=PSRC.dll
 
 # threading settings
-NProcessors = 48
+NProcessors = 28
 NBatches = 96
 
 # PSRC and HDF5
 ShouldRunInputTester = false
-HDF5Filename = ..\..\scenario\landuse\hh_and_persons.h5
+HDF5Filename = hh_and_persons_sampled.h5
 HDF5Path = daysim_outputs.h5
 ReadHDF5 = true
 WriteTripsToHDF5 = true
