--- a/daysim/daysim_configuration.properties
+++ b/daysim/daysim_configuration.properties
@@ -1,8 +1,8 @@
 # sampling
-HouseholdSamplingRateOneInX = 1
+HouseholdSamplingRateOneInX = 5
 HouseholdSamplingStartWithY = 1
 SamplingWeightsSettingsType = SamplingWeightsSettingsSimple
-
+CountAllIntermediateStopsOnPersonDayRecord = true
 
 HDF5SkimScaledAndCondensed = true
 NodeDistanceReaderType = HDF5
@@ -18,12 +18,12 @@ EstimationSubpath = ..\estimation
 CustomizationDll=PSRC.dll
 
 # threading settings
-NProcessors = 24
+NProcessors = 28
 NBatches = 96
 
 # PSRC and HDF5
 ShouldRunInputTester = false
-HDF5Filename = ..\..\scenario\landuse\hh_and_persons.h5
+HDF5Filename = hh_and_persons_sampled.h5
 HDF5Path = daysim_outputs.h5
 ReadHDF5 = true
 WriteTripsToHDF5 = true
