Added teleworking enhancement to DaySim

--- a/daysim_configuration_template.properties
+++ b/daysim_configuration_template.properties
@@ -427,3 +427,27 @@ AV_SharingEconomy_ConstantForOwning4Vehicles = -1.0
 BCA_WriteAggregateLogsumsToPersonRecords = false 
 WriteResidentialBufferDensityToOwnOrRent = true
 PaidRideshare_UseEstimatedInsteadOfAssertedCoefficients = true
+
+# Telecommute
+UseDiaryVsSmartphoneBiasVariables = $TELECOMMUTE
+UseProxyBiasVariables = $TELECOMMUTE
+UseWorkAtHomeModelAndVariables = $TELECOMMUTE
+WorkAtHome_DurationThreshold = 2.5
+WorkAtHome_AlternativeSpecificConstant = -1.918
+WorkAtHome_PartTimeWorkerCoefficient = -0.038
+WorkAtHome_Income0to50Coefficient = 0.020
+WorkAtHome_IncomeOver150Coefficient = 0.249
+WorkAtHome_NonWorkerAndKidsInHHCoefficient = 0 
+WorkAtHome_NoVehiclesInHHCoefficient = 0.266
+WorkAtHome_FractionMedicalJobsCoefficient = -1.131
+WorkAtHome_FractionEducationJobsCoefficient =  0
+WorkAtHome_FractionServiceJobsCoefficient = 0
+WorkAtHome_FractionOtherJobsCoefficient = -0.325
+WorkAtHome_FractionGovernmentJobsLowIncomeCoefficient = -0.968
+WorkAtHome_FractionIndustrialJobsLowIncomeCoefficient = -0.576
+WorkAtHome_FractionRetailFoodJobsLowIncomeCoefficient = -0.873
+WorkAtHome_FractionOfficeJobsLowIncomeCoefficient = 0.051
+WorkAtHome_FractionGovernmentJobsHigherIncomeCoefficient = -0.968
+WorkAtHome_FractionIndustrialJobsHigherIncomeCoefficient = -0.576
+WorkAtHome_FractionRetailFoodJobsHigherIncomeCoefficient = -0.873
+WorkAtHome_FractionOfficeJobsHigherIncomeCoefficient = 0.051
