--- a/inputs/model-spec.yml
+++ b/inputs/model-spec.yml
@@ -1,7 +1,6 @@
 name: model_py3
 channels:
   - conda-forge
-  - anaconda-fusion
   - defaults
 dependencies:
   - attrs=20.3.0=pyhd3eb1b0_0
@@ -9,8 +8,8 @@ dependencies:
   - blosc=1.21.0=h0e60522_0
   - brotlipy=0.7.0=py37hcc03f2d_1001
   - bzip2=1.0.8=h8ffe710_4
-  - ca-certificates=2021.5.25=haa95532_1
-  - certifi=2021.5.30=py37haa95532_0
+  - ca-certificates=2023.11.17=h56e8100_0
+  - certifi=2023.11.17=pyhd8ed1ab_0
   - cffi=1.14.5=py37hd8e9650_0
   - chardet=4.0.0=py37h03978a9_1
   - cryptography=3.4.7=py37h20c650d_0
@@ -34,18 +33,16 @@ dependencies:
   - numpy=1.19.2=py37hadc3359_0
   - numpy-base=1.19.2=py37ha3acd2a_0
   - openpyxl=3.0.7=pyhd3eb1b0_0
-  - openssl=1.1.1k=h2bbff1b_0
-  - pandana=0.6.1=py37h90003fb_0
+  - openssl=1.1.1q=h8ffe710_0
   - pandas=1.2.3=py37hf11a4ad_0
   - pip=21.0.1=py37haa95532_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.8=py_0
   - pycparser=2.20=pyh9f0ad1d_2
-  - pyodbc=4.0.30=py37ha925a31_0
   - pyopenssl=20.0.1=pyhd8ed1ab_0
   - pyreadline=2.1=py37_1
   - pysocks=1.7.1=py37h03978a9_3
-  - pytables=3.6.1=py37h1da0976_0
+  - pytables=3.5.2=py37h6a20dd8_0
   - python=3.7.10=h6244533_0
   - python-dateutil=2.8.1=pyhd3eb1b0_0
   - python_abi=3.7=1_cp37m
@@ -70,4 +67,6 @@ dependencies:
   - xlsxwriter=1.3.8=pyhd3eb1b0_0
   - zipp=3.4.1=pyhd3eb1b0_0
   - zlib=1.2.11=h62dcd97_4
-prefix: C:\Users\rsg\.conda\envs\model
+  - pip:
+    - cython==3.0.7
+    - pandana==0.6.1
